# Lora-Kernel-

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  ci.sh  main.cpp  math.md
.github/workflows/: ci.yml
bindings/: python_module.cpp
include/api/: rest_api.hpp  security.hpp  serving_production.hpp  websocket_streaming.hpp
include/core/: compilation_validator.hpp  error_handling.hpp  gemm_engine.hpp  logging.hpp  memory_leak_detector.hpp  memory_manager.hpp  memory_optimization.hpp  memory_pool.hpp  numeric_shield.hpp  profiler.hpp  scheduler.hpp  signal_handler.hpp  tensor.hpp  unified_memory.hpp
include/crypto/: crypto_engine.hpp
include/data/: dataloader.hpp  datasets.hpp  text_sanitizer.hpp  tokenizers.hpp
include/distributed/: checkpointing.hpp  distributed_training.hpp  nccl_wrapper.hpp  zero_optimizer.hpp
include/hw/: cuda_backend.hpp  cuda_kernels.hpp  gpu_compilation.hpp  kernels.hpp  other_backends.hpp
include/io/: export_suite.hpp  mmap_loader.hpp  model_loading.hpp  serialization.hpp
include/monitoring/: production_monitoring.hpp
include/nn/: activation_checkpointing.hpp  attention_variants.hpp  bf16_support.hpp  checkpointing.hpp  distillation.hpp  flash_attention.hpp  fused_adamw.hpp  fused_kernels.hpp  gradient_health.hpp  grpo_training.hpp  inference.hpp  kv_cache.hpp  lora.hpp  loss_scaling.hpp  mixed_precision.hpp  model_merging.hpp  model_pruning.hpp  optimizer_and_loss.hpp  paged_kv_cache.hpp  ppo_training.hpp  production_trainer.hpp  quantization_production.hpp  quantization_suites.hpp  rms_norm.hpp  rope.hpp  sparse_attention.hpp  swiglu.hpp  tensor_sharding.hpp  training_enhancements.hpp  training_pipeline.hpp  transformer_blocks.hpp  weight_init.hpp
include/serving/: onnx_backend.hpp
include/tensor/: safetensors.hpp
src/core/: signal_handler.cpp
src/nn/: transformer_blocks.cpp
tests/: benchmark.cpp  test_backprop.cpp  test_convergence.cpp  test_distributed.cpp  test_e2e.cpp  test_gradient_checker.cpp  test_kv_cache.cpp  test_mha.cpp  test_nn.cpp
